# pixi-editable

./: pixi.toml
my-app/: pyproject.toml
my-app/my-app/: main.py  other_module.py
my-package/: pyproject.toml
my-package/my_package/: __init__.py
