[project]
name = "my-package"  
version = "0.1"  
description = "Add a short description here" 
readme = "README.md" 
requires-python = ">=3.10"
license = {file = "LICENSE"}

maintainers = [
  {name = "Joe Bloggs", email = "jog-bloggs@gmail.com" } 
]

dependencies = [
]

[build-system]
requires = ["hatchling>=1.24.2", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"